JumpScript/tests/baselines/reference/classExtendsInterface_not.errors.txt
tests/cases/compiler/classExtendsInterface_not.jump(1,20): error TS2339: Property 'bogus' does not exist on type '""'.


==== tests/cases/compiler/classExtendsInterface_not.jump (1 errors) ====
    class C extends "".bogus {}
                       ~~~~~
!!! error TS2339: Property 'bogus' does not exist on type '""'.
    